Revision history for Perl distribution Win32-Mechanize-NotepadPlusPlus

v0.xxx
    - test suite bug: with v7.9.1 and newer, replaceTargetText() changes
      the selection/getTargetText() value, so update the readback
      to be version agnostic (#57)

v0.005 2020-Oct-16
    - replace %ENCODINGKEY with %BUFFERENCODING, because the old hash
      had wrong values that didn't match getEncoding's return values
      (#50)
    - add setEncoding command to call NPPM_SETBUFFERENCODING
      as the logical pair to getEncoding (#51)

v0.004001 2020-Jun-20
    - fix bug in notepad->prompt(), which only used two of the three
      arguments, in wrong order (#47); test suite verifies default
      values for title and default when they aren't used
    - added new examples/pasteSpecial.pl to show how to paste a
      clipboard entry other than CF_TEXT into Notepad++

v0.004 2020-Jun-04
    - fix bug in propertyNames() which deleted final char (#45)
    - implemented helper methods: forEachLine, deleteLine, replaceWholeLine,
        replaceLine, flash, getWord, getCurrentWord, getUserLineSelection,
        getUserCharSelection (#15)
    - make setTarget an alias of setTargetRange, and write an alias of
        addText, for PythonScript compatibility (#15)
    - implemented new auto-wrapper to get searchInTarget and similar calls
        to work right (#42)
    - fixed replaceTarget() and replaceTargetRE() replacing target with the
        empty string (#41)
    - fixed length bug in getTargetText() (#40)
    - fixed bug in editor->setText('') which had empty strings
        cause crash (#39)

v0.003 2020-Apr-06
    - fix mistakes and missing information in the POD (#35)
    - add author tests for checking for autogen entries not in the
        message list, and also note scintilla messages missing
        from autogen that aren't manually implemented or deprecated
        (#34)
    - some NPP v7.8 messages were missing, so add them (#29)